# onchain-intent-oracle

./: .gitignore  .signature_cache.json  CHANGES.md  README (3).md  README.md  docker-compose.yml  pyproject.toml  signature-decoder-concurrency-fix.patch  test_signature_decoder_reconstructed.py
docs/: architecture.md  integration_with_autoprover.md  prompts.md
morpho-analysis-dense/: conflict_report.md  observed_design.json  observed_design.md
morpho-analysis-dense/visualizations/: call_graph.mmd  state_machine.mmd
morpho-analysis-full/: conflict_report.md  observed_design.json  observed_design.md
morpho-analysis-full/visualizations/: call_graph.mmd  state_machine.mmd
scripts/: demo.sh  init-db.sql  populate_kb.sh  setup_db.sh
src/onchain_intent_oracle/: __init__.py  cli.py
src/onchain_intent_oracle/agents/: __init__.py  graph.py  state.py
src/onchain_intent_oracle/analysis/: __init__.py  anomaly_detector.py  conflict_reconciler.py  entity_key.py  invariant_miner.py  pattern_clustering.py  sample_quality.py  state_machine.py
src/onchain_intent_oracle/config/: chains.py  settings.py
src/onchain_intent_oracle/ingestion/: __init__.py  abi_utils.py  cache.py  calldata_decoder.py  log_decoder.py  proxy_detector.py  rpc_manager.py  signature_decoder.py  source_resolver.py  trace_fetcher.py
src/onchain_intent_oracle/models/: log.py  (+5 more)
test-output-49/: conflict_report.md  observed_design.json  observed_design.md
test-output-49/visualizations/: call_graph.mmd  state_machine.mmd
test-output_Morpho/: autoprover_system_doc.md  conflict_report.md  observed_design.json  observed_design.md
test-output_Morpho/visualizations/: call_graph.mmd
tests/: conftest.py  test_cli.py
tests/test_agents/: test_graph.py
tests/test_analysis/: test_conflict_reconciler.py  test_entity_key.py  test_invariant_miner.py  test_sample_quality.py  test_state_machine.py
tests/test_ingestion/: test_calldata_decoder.py  test_log_decoder.py  test_proxy_detector.py  test_rpc_manager.py  test_source_resolver.py
tests/test_output/: test_autoprover_bundle.py
(+24 files in other folders)
